# Risk-Analytics-Fraud-Detection

./: .dockerignore  .gitignore  README.md  pyproject.toml
notebooks/: fraud_detection.ipynb
scripts/: build_and_push.ps1  build_and_push.sh
scripts/serving_artifact/: build_and_push.ps1  build_and_push.sh
scripts/training_artifact/: build_and_push.sh
serving_container/: Dockerfile  README.md  app.py  model_utils.py  requirements.txt
src/: __init__.py
src/api/: __init__.py
src/config/: __init__.py
src/expriment_tracking/: __init__.py
src/monitoring/: __init__.py
src/training/: __init__.py
src/utils/: __init__.py
training_job/: Dockerfile  requirements.txt  train.py  training_pipeline.py
training_job/training/: logger.py  train.py
