[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-analytics-fraud-detection"
version = "0.1.0"
description = "Real-time credit card fraud detection system using MLOps on Google Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Gokul", email = "gokulrajar15@gmail.com"}
]
keywords = ["fraud-detection", "risk-analytics", "machine-learning", "mlops", "gcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-aiplatform>=1.0.0",
    "tensorflow>=2.10.0",
    "mlflow>=2.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/gokulrajar15/Risk-Analytics-Fraud-Detection"
Repository = "https://github.com/gokulrajar15/Risk-Analytics-Fraud-Detection"
Issues = "https://github.com/gokulrajar15/Risk-Analytics-Fraud-Detection/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
